--- a/C/2.x_introduce_C.md
+++ b/C/2.x_introduce_C.md
@@ -73,7 +73,42 @@ int main()
 }
 
 ```
-
 ### 2.6 printf() 함수의 기본적인 사용법
 - printf는 "print formatted"의 줄임말로, 형식(format)을 지정해서 출력한다는 의미  
 형식 지정자(Format Specifier) : %d, %f, %s 등 형식 지정자를 사용해 출력 형식을 조정
+
+### 2.8 키워드와 예약어
+- C 언어에서 미리 정해진 단어로, 사용자가 변수명, 함수명 등으로 쓸 수 없는 단어  
+예약어는 "사용 불가능한 단어"의 전체 집합, 그중에서 실제 의미를 가지는 단어가 키워드.  
+= 모든 키워드는 예약어이지만, 모든 예약어가 키워드는 아니다.
+
+```
+#include <stdio.h>
+
+void say_hello(void); // function declaration, prototyping
+
+int main()
+{
+    say_hello();
+
+    return 0;
+}
+
+void say_hello(void) // function definition
+{
+    printf("Hello, World!\n");
+
+    return;
+}
+```
+### 2.9 함수 만들기
+- operating system이 프로그램을 실행시킬 때, 무조건 main 함수부터 불러온다.  
+Why? 컴파일러가 프로그램의 진입점(entry point)를 main으로 설정하기 때문
+
+- 변수나 함수는 사용 전에(윗 줄에) 선언이 되어있어야 한다. 컴파일러가 순차적으로 해석하기 때문.  
+ex) int i = 1; i를 1로 초기화  
+void say_hello(void) -> 앞에 void는 출력 타입, 뒤에 void는 입력 타입.
+
+- 선언은 존재만 알림 → 컴파일러가 인식  
+정의는 실제 내용 작성 → 링커가 연결  
+링킹 과정에서 선언부와 정의부가 연결됩니다.
