--- a/C/2.0_introduce_C.md
+++ b/C/2.0_introduce_C.md
@@ -29,7 +29,7 @@ int main(void)  // main define
 main 함수 정의 시작  
 `variable declaration(변수 선언)` : 메모리를 이만큼 사용하겠다!  
 - *정의? 선언?*  
-<u>선언 (Declaration) : 자료형과 이름만 알려주고, 메모리를 할당하지 않습니다.</u>  
+선언 (Declaration) : 자료형과 이름만 알려주고, 메모리를 할당하지 않습니다.  
 정의 (Definition) : 자료형과 이름을 지정하면서 메모리도 할당합니다.
 
 ### 2.3 변수가 편리한 이유
