--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -1,1 +1,43 @@
-### 3.1 데이터와 자료형
+### 3.1 데이터와 자료형(Data and Data types)
+- 정수 자료형 : `char`, `int`, `short`, `long` / unsigned, signed
+- 실수 자료형 : `float`, `double`, `long double`
+
+### 3.2 변수와 상수(Variable and Constants)
+- int angel = 1004;
+  > int -> 자료형  
+  > angel -> Variable(숫자를 담을 수 있는 메모리 공간)  
+  > 1004 -> `literal constant(문자 그대로 불변의 값)`
+
+- const int angel = 1004;
+  > const -> Qualifier(한정자, 제한자)  
+  > int -> 자료형  
+  > angel = `Symbolic constant(기호적 상수)`  
+  > 1004 -> literal constant
+---
+``` c
+//#define _CRT_SECURE_NO_WARNINGS  // macro
+
+#include <stdio.h>
+
+int main()
+{
+    int i = 0;
+
+    scanf("%d", &i);  // & : ampersand
+
+    printf("Value is %d\n", i);
+
+    return 0;
+}
+```
+### 3.3 scanf()
+- &i는 i의 메모리 주소를 알려줍니다.  
+  scanf는 해당 주소에 입력 값을 저장합니다.
+
+- MSVC에서 보안 문제로 인해 경고를 발생시키는데, 경고를 무시하고 기존 C 표준 함수를 사용하고 싶다면, 매크로를 정의해야 함.  
+  > a) #define _CRT_SECURE_NO_WARNINGS (macro)
+  > b) project - properties - preprocessor - debug & release 모두 Definition에 _CRT_SECURE_NO_WARNINGS 입력  
+- GCC와 호환이 안됨 : GCC는 _CRT_SECURE_NO_WARNINGS와 같은 MSVC 전용 매크로를 인식하지 않습니다.
+
+### 3.4 간단한 입출력 프로그램 만들기
+- 
