--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -38,6 +38,29 @@ int main()
   > a) #define _CRT_SECURE_NO_WARNINGS (macro)
   > b) project - properties - preprocessor - debug & release 모두 Definition에 _CRT_SECURE_NO_WARNINGS 입력  
 - GCC와 호환이 안됨 : GCC는 _CRT_SECURE_NO_WARNINGS와 같은 MSVC 전용 매크로를 인식하지 않습니다.
+---
+``` c
+int main()
+{
+    float Won = 0.0f;
+    float Dollar = 0.0f;
 
+    printf("plz input Won\n");
+    scanf("%f", &Won);
+
+    Dollar = 0.00089f * Won;
+
+    printf("Dollar = %f\n", Dollar);
+
+    return 0;
+}
+```
 ### 3.4 간단한 입출력 프로그램 만들기
-- 
+- https://alvinalexander.com/programming/printf-format-cheat-sheet/  
+  ![Image](https://github.com/user-attachments/assets/2174bfbc-1d0b-4028-88da-39c6c5a11606)
+- tip : C 언어의 scanf는 포맷 문자열만 사용해야 하고, 공백 문자나 줄 바꿈 같은 건 넣으면 안 됩니다.
+
+
+
+
+
