--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -33,10 +33,11 @@ int main()
 ### 3.3 scanf()
 - &i는 i의 메모리 주소를 알려줍니다.  
   scanf는 해당 주소에 입력 값을 저장합니다.
-
-- MSVC에서 보안 문제로 인해 경고를 발생시키는데, 경고를 무시하고 기존 C 표준 함수를 사용하고 싶다면, 매크로를 정의해야 함.  
+  
+- ⚠️ MSVC에서 보안 문제로 인해 경고를 발생시키는데, 경고를 무시하고 기존 C 표준 함수를 사용하고 싶다면, 매크로를 정의해야 함.  
   > a) #define _CRT_SECURE_NO_WARNINGS (macro)
-  > b) project - properties - preprocessor - debug & release 모두 Definition에 _CRT_SECURE_NO_WARNINGS 입력  
+  > b) project - properties - preprocessor - debug & release 모두 Definition에 _CRT_SECURE_NO_WARNINGS 입력
+
 - GCC와 호환이 안됨 : GCC는 _CRT_SECURE_NO_WARNINGS와 같은 MSVC 전용 매크로를 인식하지 않습니다.
 ---
 ``` c
@@ -58,9 +59,19 @@ int main()
 ### 3.4 간단한 입출력 프로그램 만들기
 - https://alvinalexander.com/programming/printf-format-cheat-sheet/  
   ![Image](https://github.com/user-attachments/assets/2174bfbc-1d0b-4028-88da-39c6c5a11606)
-- tip : C 언어의 scanf는 포맷 문자열만 사용해야 하고, 공백 문자나 줄 바꿈 같은 건 넣으면 안 됩니다.
+- ⚠️ C 언어의 scanf는 포맷 문자열만 사용해야 하고, 공백 문자나 줄 바꿈 같은 건 넣으면 안 됩니다.
 
-
-
-
+### 3.5 정수와 실수(Integers and Real numbers)
+- C 언어에서는 변수 선언 시 메모리 공간을 자료형에 맞게 미리 확보합니다.  
+  정수와 실수는 저장 방식과 연산 방식이 달라서 구분해야 합니다.
+- Exponent : 3.14 = 3.14E0 = 3.14e0 = 0.314E1 = 31.4E-1
+- signed와 unsigned는 range가 다름 (1bit을 부호에 할당하기 때문에)
+- ⭐️**부동소수점은 기본적으로 double에 할당 (정밀도 높음, 8바이트)**  
+  메모리를 아끼기 위해 또는 정밀도가 덜 중요한 경우 float 사용 (4바이트)  
+  float은 double의 절반 크기로 메모리 효율이 좋음
+- float은 sign exponent mantissa ~~(fraction)~~ 으로 구성됨 (float은 unsigned가 없음)  
+  > Fraction : 그냥 소수 부분을 가리킬 때 사용.  
+  > Mantissa : 정규화된 유효숫자 부분. 부호 비트와 지수 부분을 제외한 나머지.
+- 부동소수점 표준 방식 (https://www.geeksforgeeks.org/ieee-standard-754-floating-point-numbers/)  
+  ![Image](https://github.com/user-attachments/assets/b88014e3-ad64-40eb-ae4f-8c650fca4286)
 
