--- a/C/2.0_introduce_C.md
+++ b/C/2.0_introduce_C.md
@@ -26,27 +26,27 @@ int main(void)  // main define
 ```
 ### 2.2 c프로그램 훑어보기 / 각 문장들이 어떤 의미를 갖는지 설명.
 - `Preprocessor Instruction(전처리기)` : compile 하기 전에. 가져다쓰는 것.  
-main 함수 정의 시작  
+  main 함수 정의 시작  
 `variable declaration(변수 선언)` : 메모리를 이만큼 사용하겠다!  
 - *정의? 선언?*  
-선언 (Declaration) : 자료형과 이름만 알려주고, 메모리를 할당하지 않습니다.  
-정의 (Definition) : 자료형과 이름을 지정하면서 메모리도 할당합니다.
+  선언 (Declaration) : 자료형과 이름만 알려주고, 메모리를 할당하지 않습니다.  
+  정의 (Definition) : 자료형과 이름을 지정하면서 메모리도 할당합니다.
 
 ### 2.3 변수가 편리한 이유
 - 메모리의 주소를 직접 다루지 않고도 메모리의 데이터에 직접 접근할 수 있는것 처럼 사용가능하다. 일반적인 함수를 만들기 용이하다.
 
 ### 2.4 자료형이 필요한 이유
 1. 연산 방식 차이
-정수와 실수는 연산 방식이 달라서, 자료형을 미리 구분해야함
+  정수와 실수는 연산 방식이 달라서, 자료형을 미리 구분해야함
 2. 메모리 효율과 속도
-숫자의 크기에 따라 필요한 메모리가 다름 (`char < short < int < long`)  
-작은 자료형을 쓰면 메모리를 절약하고 연산 속도가 빨라짐 / double, float,,,
+  숫자의 크기에 따라 필요한 메모리가 다름 (`char < short < int < long`)  
+  작은 자료형을 쓰면 메모리를 절약하고 연산 속도가 빨라짐 / double, float,,,
 
 ### 2.5 변수를 선언하는 방법
 - 정수 하나를 담을만한 메모리 공간을 확보했고, 메모리 공간을 x라는 변수를 통해서 접근할 수 있다.  
-결과확인 : 1. console 창에 출력해보기  2. 메모리 내부에 있는 값을 들여다보기. (Debugger 사용법)  
-알고리즘에서는 앞에 메모리를 어떻게 쓰겠다 를 변수 정의로 보여주고 시작한다. 변수는 앞쪽에.  
-int x=1, y=2, z=x+y -> 문법상 문제는 없지만, *operation은 분리해서 작성하는 것이 실수가 적다.*
+  결과확인 : 1. console 창에 출력해보기  2. 메모리 내부에 있는 값을 들여다보기. (Debugger 사용법)  
+  알고리즘에서는 앞에 메모리를 어떻게 쓰겠다 를 변수 정의로 보여주고 시작한다. 변수는 앞쪽에.  
+  int x=1, y=2, z=x+y -> 문법상 문제는 없지만, ⚠️ *operation은 분리해서 작성하는 것이 실수가 적다.*
 ---
 ``` c
 #include <stdio.h>
@@ -72,13 +72,13 @@ int main()
 
 ```
 ### 2.6 printf() 함수의 기본적인 사용법
-- printf는 *"print formatted"*의 줄임말로, *형식(format)을 지정해서 출력한다*는 의미  
-형식 지정자(Format Specifier) : %d, %f, %s 등 형식 지정자를 사용해 출력 형식을 조정
+- ⭐️ printf는 *"print formatted"*의 줄임말로, *형식(format)을 지정해서 출력한다*는 의미  
+  형식 지정자(Format Specifier) : %d, %f, %s 등 형식 지정자를 사용해 출력 형식을 조정
 
 ### 2.8 키워드와 예약어
-- C 언어에서 미리 정해진 단어로, 사용자가 변수명, 함수명 등으로 쓸 수 없는 단어  
-예약어는 "사용 불가능한 단어"의 전체 집합, 그중에서 실제 의미를 가지는 단어가 키워드.  
-= 모든 키워드는 예약어이지만, 모든 예약어가 키워드는 아니다.
+- ⚠️ C 언어에서 미리 정해진 단어로, 사용자가 변수명, 함수명 등으로 쓸 수 없는 단어  
+  예약어는 "사용 불가능한 단어"의 전체 집합, 그중에서 실제 의미를 가지는 단어가 키워드.  
+  = 모든 키워드는 예약어이지만, 모든 예약어가 키워드는 아니다.
 ---
 ``` c
 #include <stdio.h>
@@ -101,15 +101,15 @@ void say_hello(void) // function definition
 ```
 ### 2.9 함수 만들기
 - operating system이 프로그램을 실행시킬 때, 무조건 main 함수부터 불러온다.  
-Why? *컴파일러가 프로그램의 진입점(entry point)를 main으로 설정하기 때문*
+  Why? *컴파일러가 프로그램의 진입점(entry point)를 main으로 설정하기 때문*
 
-- 변수나 함수는 사용 전에(윗 줄에) 선언이 되어있어야 한다. 컴파일러가 순차적으로 해석하기 때문.  
-ex) int i = 1; i를 1로 초기화  
-void say_hello(void) -> 앞에 void는 출력 타입, 뒤에 void는 입력 타입.
+- ⚠️ 변수나 함수는 사용 전에(윗 줄에) 선언이 되어있어야 한다. 컴파일러가 순차적으로 해석하기 때문.  
+  ex) int i = 1; i를 1로 초기화  
+  void say_hello(void) -> 앞에 void는 출력 타입, 뒤에 void는 입력 타입.
 
 - 선언은 존재만 알림 → 컴파일러가 인식  
-정의는 실제 내용 작성 → 링커가 연결  
-링킹 과정에서 선언부와 정의부가 연결됩니다.
+  정의는 실제 내용 작성 → 링커가 연결  
+  링킹 과정에서 선언부와 정의부가 연결됩니다.
 ---
 ``` c
 #include <stdio.h>
@@ -142,7 +142,7 @@ void say_hello(void) // function definition
     return;
 }
 ```
-### 2.10 디버거 사용법
+### 2.10 디버거 사용법 🔥
 - `Break Point (빨간 점)`: 해당 코드 실행 직전까지 멈춤  
 `F5 (Start Debugging)`  
 `F11 (Step Into)`: 한 줄씩 실행하며 함수 내부로 진입  
@@ -156,7 +156,7 @@ int x = 1;의 유효 범위는 함수 내부 (Scope 개념)
 - *Syntax Error*는 빨간 밑줄로 금방 찾을 수 있음. Compiler가 Compile을 못하기 때문에.  
 *Semantic Error*는 Compiler가 못잡기 때문에 올바른 test로 직접 찾아야 한다. `assert`로 편의성 개선 가능.
 
-- `assert`란?  
+- ✅ `assert`란?  
 헤더 파일 <assert.h> 포함 필요. 조건이 참인지 검사하고, 거짓일 경우 프로그램을 즉시 종료  
 *주로 디버깅 및 오류 확인 용도*로 사용, but 런타임 환경에서는 에러 처리를 직접 구현하는 게 안전.
 
