--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -1,8 +1,8 @@
-### 3.1 데이터와 자료형(Data and Data types)
+### 📌 3.1 데이터와 자료형(Data and Data types)
 - 정수 자료형 : `char`, `int`, `short`, `long` / unsigned, signed
 - 실수 자료형 : `float`, `double`, `long double`
 
-### 3.2 변수와 상수(Variable and Constants)
+### 📌 3.2 변수와 상수(Variable and Constants)
 - int angel = 1004;
   > int -> 자료형  
   > angel -> Variable(숫자를 담을 수 있는 메모리 공간)  
@@ -30,7 +30,7 @@ int main()
     return 0;
 }
 ```
-### 3.3 scanf()
+### 📌 3.3 scanf()
 - &i는 i의 메모리 주소를 알려줍니다.  
   scanf는 해당 주소에 입력 값을 저장합니다.
   
@@ -56,12 +56,12 @@ int main()
     return 0;
 }
 ```
-### 3.4 간단한 입출력 프로그램 만들기
+### 📌 3.4 간단한 입출력 프로그램 만들기
 - https://alvinalexander.com/programming/printf-format-cheat-sheet/  
   ![Image](https://github.com/user-attachments/assets/2174bfbc-1d0b-4028-88da-39c6c5a11606)
 - ⚠️ C 언어의 scanf는 포맷 문자열만 사용해야 하고, 공백 문자나 줄 바꿈 같은 건 넣으면 안 됩니다.
 
-### 3.5 정수와 실수(Integers and Real numbers)
+### 📌 3.5 정수와 실수(Integers and Real numbers)
 - C 언어에서는 변수 선언 시 메모리 공간을 자료형에 맞게 미리 확보합니다.  
   정수와 실수는 저장 방식과 연산 방식이 달라서 구분해야 합니다.
 - Exponent : 3.14 = 3.14E0 = 3.14e0 = 0.314E1 = 31.4E-1
