--- a/C/0.8_CPU_control_bus.md
+++ b/C/0.8_CPU_control_bus.md
@@ -1,4 +1,4 @@
-### 0.8 CPU가 일하는 방법
+### 📌 0.8 CPU가 일하는 방법
 ![Image](https://github.com/user-attachments/assets/e6c0e76c-95c8-4c16-bd8d-af640faa31f3)
 ---
 
