--- a/C/0.8_CPU_control_bus.md
+++ b/C/0.8_CPU_control_bus.md
@@ -22,7 +22,7 @@
 
 #### memory data register
 - 메모리와 CPU 사이에서 데이터를 주고받는 임시 저장소  
-데이터 형식이 명령어 일지라도, 일단 이곳을 거침
+⚠️ 데이터 형식이 명령어 일지라도, 일단 이곳을 거침
 
 #### current instruction register
 - 가져온 명령어를 해석하고 실행하기 위해 저장하는 곳 (명령어 디코딩)
