--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -77,3 +77,90 @@ int main()
 - 부동소수점 표준 방식 (https://www.geeksforgeeks.org/ieee-standard-754-floating-point-numbers/)  
   ![Image](https://github.com/user-attachments/assets/b88014e3-ad64-40eb-ae4f-8c650fca4286)
 
+### 📌 3.6 정수의 오버플로우(Overflow)
+- 2진수로 입력 / format specifier 문제 확인
+``` c
+#include <stdio.h>
+#include <limits.h>
+#include <stdlib.h>
+
+int main()
+{
+    //1
+    unsigned int i = 0b11111111111111111111111111111111;  // 4byte -> 32bit
+    unsigned int u = UINT_MAX;
+
+    printf("%u\n", i);  // 4294967295
+    printf("%u\n", u);  // 4294967295
+    printf("%d\n", i);  // -1 -> signed int
+
+    printf("%u\n", sizeof(unsigned int));
+    printf("%u\n", sizeof(i));
+}
+```
+- 0b : 뒤의 literal이 binary라는 의미. (C 표준은 아니다.)
+- sizeof()는 연산자.  
+  ⚠️ C4477: 'printf' : format string '%u' requires an argument of type 'unsigned int', but variadic argument 1 has type 'size_t'  
+  consider using '%zu' in the format string
+  > size_t는 C 언어에서 메모리 크기나 객체 크기를 다룰 때 사용되는 자료형  
+  > %zu는 size_t 타입의 값을 출력하는 데 사용되며, %u는 unsigned int 타입의 값에 사용
+  >   
+  > size_t를 **unsigned int**로 형변환하여 사용할 수도 있지만, **%zu**로 서식 지정자를 변경하는 것이 더 안전하고 권장됩니다.  
+  > size_t는 시스템 환경에 따른 차이점으로, 64비트 시스템에서 **unsigned long**이 될 수 있고, 32비트 시스템에서는 **unsigned int**일 수 있습니다.  
+  > 이에 따라 %u로 size_t를 출력할 때 시스템 간 호환성 문제를 예방하기 위해 "%zu"를 사용하도록 유도합니다.  
+  > 또한, C11 표준에서 size_t 타입을 출력할 때 **%zu**를 사용해야 한다고 명시하고 있기 때문에,  
+  > VS2022는 이 표준을 따르기 위해 경고를 추가한 것으로 보입니다.
+
+- %d여도 작은 숫자에서는 에러가 없었다.
+``` c
+    //2
+    unsigned int i = 1024;
+
+    printf("%d", i);  // 1024 -> OK
+
+```
+- 
+``` c
+    //3
+    unsigned int u_max = UINT_MAX;  // macro
+    unsigned int u_min = 0;
+    signed int i_max = INT_MAX;
+    signed int i_min = INT_MIN;
+
+    printf("max of uint = %u\n", u_max);  // 4294967295
+    printf("min of uint = %u\n", u_min);  // 0
+    printf("max of int = %d\n", i_max);  // 2147483647
+    printf("min of int = %d\n", i_min);  // -2147483648
+
+    //4
+    unsigned int u_max = UINT_MAX + 1;
+
+    printf("%u\n", u_max);  // 0
+
+    //5
+    unsigned int u_max = UINT_MAX + 1;
+
+    // i to binary representation
+    char buffer[33];
+    _itoa(u_max, buffer, 2);
+
+    // print decimal and binary
+    printf("decimal: %u\n", u_max);  // 0
+    printf("binary: %s\n", buffer);  // 0
+
+    //6
+    signed int i_max = INT_MAX;
+    signed int i_max1 = INT_MAX + 1;
+
+    printf("int_max : %i\n", i_max);  // 2147483647
+    printf("int_max + 1 : %i\n", i_max1);  //-2147483648
+```
+- ✅ UINT_MAX에서 F12(go to definition)로 직접 확인해보자. (UINT_MIN이 0이라 없고, INT_MAX, INT_MIN define 확인 가능.)
+- char buffer[33];  
+  문자를 33개 메모리에 나란히 저장할 수 있는 배열을 선언.  
+  4byte * 8bit = 32bit인데 +1 해서 33을 사용하는 이유는??
+
+- ⭐ **Overflow** : 32비트로 표현 가능한 최대값에 1을 더하면, 비트 수가 33개로 늘어나게 되지만 32비트 시스템에서는 이를 표현할 수 없으므로, 최상위 비트는 버려지고 값은 다시 0으로 돌아옵니다. 이 현상을 오버플로우라고 하며, 32비트 시스템에서는 더 이상 표현할 수 없는 값을 0으로 되돌리는 결과를 초래합니다.  
+  > ex) if 4bit,  
+  > 1111 + 1 = 1 0000  -->  UINT_MAX + 1 -> 0  
+  > 1 0000 - 1         -->  0 -1         -> 4294967295
