--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -119,7 +119,7 @@ int main()
     printf("%d", i);  // 1024 -> OK
 
 ```
-- 
+- Overflow 확인
 ``` c
     //3
     unsigned int u_max = UINT_MAX;  // macro
