--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -2,6 +2,7 @@
 - 정수 자료형 : `char`, `int`, `short`, `long` / unsigned, signed
 - 실수 자료형 : `float`, `double`, `long double`
 
+
 ### 📌 3.2 변수와 상수(Variable and Constants)
 - int angel = 1004;
   > int -> 자료형  
@@ -13,6 +14,7 @@
   > int -> 자료형  
   > angel = `Symbolic constant(기호적 상수)`  
   > 1004 -> literal constant
+
 
 ### 📌 3.3 scanf()
 - &i는 i의 메모리 주소를 알려줍니다.  
@@ -39,7 +41,7 @@ int main()
     return 0;
 }
 ```
----
+
 
 ### 📌 3.4 간단한 입출력 프로그램 만들기
 - https://alvinalexander.com/programming/printf-format-cheat-sheet/  
@@ -61,7 +63,7 @@ int main()
     return 0;
 }
 ```
----
+
 
 ### 📌 3.5 정수와 실수(Integers and Real numbers)
 - C 언어에서는 변수 선언 시 메모리 공간을 자료형에 맞게 미리 확보합니다.  
@@ -76,6 +78,7 @@ int main()
   > Mantissa : 정규화된 유효숫자 부분. 부호 비트와 지수 부분을 제외한 나머지.
 - 부동소수점 표준 방식 (https://www.geeksforgeeks.org/ieee-standard-754-floating-point-numbers/)  
   ![Image](https://github.com/user-attachments/assets/b88014e3-ad64-40eb-ae4f-8c650fca4286)
+
 
 ### 📌 3.6 정수의 오버플로우(Overflow)
 - 2진수로 입력 / format specifier 문제 확인
@@ -119,6 +122,7 @@ int main()
     printf("%d", i);  // 1024 -> OK
 
 ```
+
 - Overflow 확인
 ``` c
     //3
@@ -164,3 +168,47 @@ int main()
   > ex) if 4bit,  
   > 1111 + 1 = 1 0000  -->  UINT_MAX + 1 -> 0  
   > 1 0000 - 1         -->  0 -1         -> 4294967295
+
+
+### 📌 3.7 다양한 정수형들
+- 정수 자료형  
+  ![Image](https://github.com/user-attachments/assets/fdef4cdc-d770-4c18-a2f4-02c44b2cbe7e)
+- > hhd / hhu (c)  
+  > hd / hu  
+  > d or i / u  
+  > ld / lu  
+  > lld / llu
+``` c
+#include <stdio.h>
+#include <stdlib.h>
+
+int main()
+{
+    char c = 65;
+    short s = 200;
+    unsigned int ui = 3000000000U;  // 3'000'000'000U  <-- c++ 표준
+    long l = 65537L;
+    long long ll = 12345678908642ll;  // 12'345'678'908'642ll
+
+    // char는 %hhd로 출력하지만, %d(큰 자료형)로 출력해도 문제 없음.
+    // %c는 문자열로 출력해준다.
+    printf("char = %hhd, %d, %c\n", c, c, c);  // 65, 65, A
+    // %hhd -> -128~128, 200 -> -56  ***Overflow***
+    printf("short = %hhd, %hd, %d\n", s, s, s);  // -56, 200, 200
+    // %d ***Overflow***
+    printf("unsigned int = %u, %d\n", ui, ui);  // 3000000000, -1294967296
+    // %hd ***Overflow***
+    printf("long = %ld, %hd\n", l, l);  // 65537, 1
+    // %ld ***Overflow***
+    printf("long long = %lld, %ld\n", ll, ll);  // 12345678908642, 1942899938
+
+    return 0;
+}
+```
+
+
+### 📌 3.8 8진수와 16진수
+
+
+
+
