--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -208,7 +208,32 @@ int main()
 
 
 ### 📌 3.8 8진수와 16진수
+- RGB color code는 16진수. ex) #33CC99
+``` c
+#include <stdio.h>
+
+int main()
+{
+    // 4294967295
+    unsigned int decimal = 4294967295;
+    unsigned int binary = 0b11111111111111111111111111111111;  // 0b : 2진수
+    unsigned int oct = 037777777777;  // 0 : 8진수
+    unsigned int hex = 0Xffffffff;  // 0x : 16진수
+
+    printf("%u\n", decimal);
+    printf("%u\n", binary);
+    printf("%u\n", oct);
+    printf("%u\n", hex);
+
+    // %o : 8진수, %x : 16진수
+    // %#o : (prefix)8진수, %#x : (prefix)16진수, %#X : (PREFIX)16진수
+    printf("%o %x %#o %#x %#X", decimal, decimal, decimal, decimal, decimal);
+
+    return 0;
+}
+```
 
 
+### 📌 3.9 고정 너비 정수
 
 
