--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -214,6 +214,7 @@ int main()
 
 int main()
 {
+    // literal constant
     // 4294967295
     unsigned int decimal = 4294967295;
     unsigned int binary = 0b11111111111111111111111111111111;  // 0b : 2진수
@@ -234,6 +235,45 @@ int main()
 ```
 
 
-### 📌 3.9 고정 너비 정수
+### 📌 3.9 고정 너비 정수(Fixed-width Integers) 🔥🔥
+``` c
+#include <stdio.h>
+//#include <stdint.h> // also included in inttypes.h
+#include <inttypes.h>
+
+int main()
+{
+    int i;
+    int32_t i32;		// 32 bit integer
+    int_least8_t i8;	// smallest 8 bit
+    int_fast8_t f8;		// fastest minimum
+    intmax_t imax;		// biggest signed integers
+    uintmax_t uimax;	// biggest unsigned integers
+
+    i32 = 1004;
+
+    printf("me32 = %d\n", i32);
+    printf("me32 = %" "d" "\n", i32);  // 문자열 "로 분리 가능
+    printf("me32 = %" PRId32 "\n", i32);
+
+    return 0;
+}
+```
+- i32는 항상 32bit size를 갖게 고정된다. (type define)
+- int: 시스템이나 컴파일러에 따라 크기가 달라질 수 있음 (예: 4바이트 또는 8바이트)  
+  int32_t: 항상 32비트(4바이트) 고정  
+  ⚠️ int32_t, uint32_t 등은 사실상 기존 자료형(int, unsigned int 등)의 별칭(typedef)  
+  ⚠️ 자료형 자체가 새로 생긴 게 아니고, 기존 자료형에 별명을 붙인 것.  
+- 왜 필요해?  
+  `이식성`: 다른 운영체제나 컴파일러에서도 같은 크기의 메모리를 사용하도록 보장 (멀티 플랫폼 대비)  
+  `일관성`: 변수의 크기가 예측 가능해서 메모리 관리가 수월함  
+
+
+
+
+
+
+
+
 
 
