--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -244,7 +244,7 @@ int main()
 int main()
 {
     int i;
-    int32_t i32;		// 32 bit integer
+    int32_t i32;		// 32 bit integer  // i32는 항상 32bit size를 갖게 고정된다. (type define)
     int_least8_t i8;	// smallest 8 bit
     int_fast8_t f8;		// fastest minimum
     intmax_t imax;		// biggest signed integers
@@ -259,11 +259,10 @@ int main()
     return 0;
 }
 ```
-- i32는 항상 32bit size를 갖게 고정된다. (type define)
 - int: 시스템이나 컴파일러에 따라 크기가 달라질 수 있음 (예: 4바이트 또는 8바이트)  
   int32_t: 항상 32비트(4바이트) 고정  
-  ⚠️ int32_t, uint32_t 등은 사실상 기존 자료형(int, unsigned int 등)의 별칭(typedef)  
-  ⚠️ 자료형 자체가 새로 생긴 게 아니고, 기존 자료형에 별명을 붙인 것.  
+- ⚠️ **int32_t는 stdint.h에서 플랫폼에 맞게 typedef로 정의됨.**
+  <img width="600" alt="Image" src="https://github.com/user-attachments/assets/ae5f203d-7ae7-4650-874e-edd8cba47d75" />
 - 왜 필요해?  
   `이식성`: 다른 운영체제나 컴파일러에서도 같은 크기의 메모리를 사용하도록 보장 (멀티 플랫폼 대비)  
   `일관성`: 변수의 크기가 예측 가능해서 메모리 관리가 수월함  
