--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -236,6 +236,10 @@ int main()
 
 
 ### 📌 3.9 고정 너비 정수(Fixed-width Integers) 🔥🔥
+- 왜 필요해?  
+  `이식성`: 다른 운영체제나 컴파일러에서도 같은 크기의 메모리를 사용하도록 보장 (멀티 플랫폼 대비)  
+  `일관성`: 변수의 크기가 예측 가능해서 메모리 관리가 수월함
+
 ``` c
 #include <stdio.h>
 //#include <stdint.h> // also included in inttypes.h
@@ -263,10 +267,11 @@ int main()
   int32_t: 항상 32비트(4바이트) 고정  
 - ⚠️ **int32_t는 stdint.h에서 플랫폼에 맞게 typedef로 정의됨.**
   <img width="600" alt="Image" src="https://github.com/user-attachments/assets/ae5f203d-7ae7-4650-874e-edd8cba47d75" />
-- 왜 필요해?  
-  `이식성`: 다른 운영체제나 컴파일러에서도 같은 크기의 메모리를 사용하도록 보장 (멀티 플랫폼 대비)  
-  `일관성`: 변수의 크기가 예측 가능해서 메모리 관리가 수월함  
 
+- printf할 때, int32_t와 대응되는 format specifier가 %hd인지 %d인지는 <inttypes.h>에 정리가 되어 있다.  
+  <img width="85" alt="Image" src="https://github.com/user-attachments/assets/4a2cabdb-2035-4b7f-9b92-3f9793b9144f" />  
+  <img width="184" alt="Image" src="https://github.com/user-attachments/assets/53d617cd-ae41-4963-b6a9-1a2f97de7a48" />
+  
 
 
 
