--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -273,11 +273,52 @@ int main()
   <img width="184" alt="Image" src="https://github.com/user-attachments/assets/53d617cd-ae41-4963-b6a9-1a2f97de7a48" />
   
 
+### 📌 3.10 문자 
+- ASCII Chart : 문자도 숫자로 모두 바꿔서 저장하고 처리한다.  
+  <img width="450" alt="Image" src="https://github.com/user-attachments/assets/7d5376fd-b85b-4fbf-9083-e68dbbc4de50" />  
+  https://en.cppreference.com/w/cpp/language/ascii
+``` c
+    // ASCII chart
+    char c = 'A';
+    char d = 65;// d = 'A'
+    char e = '*';
+
+    printf("%c %hhd\n", c, c);  // A 65
+    printf("%c %hhd\n", d, d);  // A 65
+    printf("%c %hhd\n", e, e);  // * 42
+
+    //printf("%c \n", c + 1);  // B
+```
+- backslash 뒤에 8, 16진수 숫자 변경 후 확인
+``` c
+    // escape sequence (\a : beep)
+    //char a = '\a';
+    //printf("%c", a);
+
+    printf("\07");	//\7
+    //printf("\x7");
+    //printf("x23");
+```
+- scanf에서 활용되는 \b  
+  \b는 커서 이동만 하고 문자를 삭제하지 않고, 덮어쓰기 방식으로 기존 내용을 대체합니다.
+``` c
+    // \b -> cursor 이동
+    float salary;
+    //printf("$______");
+    printf("$______\b\b\b\b\b\b");
+    scanf("%f", &salary);
+```
+- 줄 맞추기 /t
+``` c
+    printf("AB\tCDEF\n");  // AB      CDEF
+    printf("ABC\tDEF\n");  // ABC     DEF
+```
+- printf 특수문자
+``` c
+    printf("\\ \'HA+\' \"Hello\" \?\n");  // \ 'HA+' "Hello" ?
+```
 
 
-
-
-
-
-
+### 📌 3.11 부동소수점형
+- 
 
