--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -73,9 +73,8 @@ int main()
 - ⭐️ **부동소수점은 기본적으로 double에 할당 (정밀도 높음, 8바이트)**  
   메모리를 아끼기 위해 또는 정밀도가 덜 중요한 경우 float 사용 (4바이트)  
   float은 double의 절반 크기로 메모리 효율이 좋음
-- float은 sign exponent mantissa ~~(fraction)~~ 으로 구성됨 (float은 unsigned가 없음)  
-  > Fraction : 그냥 소수 부분을 가리킬 때 사용.  
-  > Mantissa : 정규화된 유효숫자 부분. 부호 비트와 지수 부분을 제외한 나머지.
+- float은 sign exponent fraction ~~(mantissa)~~ 으로 구성됨 (float은 unsigned가 없음)  
+  > Fraction : Signiticand 중에서 소수점 아래 부분
 - 부동소수점 표준 방식 (https://www.geeksforgeeks.org/ieee-standard-754-floating-point-numbers/)  
   ![Image](https://github.com/user-attachments/assets/b88014e3-ad64-40eb-ae4f-8c650fca4286)
 
@@ -319,6 +318,61 @@ int main()
 ```
 
 
-### 📌 3.11 부동소수점형
-- 
+### 📌 3.11 부동소수점형(Floating-Point Types)
+- 실수를 부동소수점 자료형으로 저장할 떄 아래와 같은 형태로 바꿔서 저장  
+  Normalized significand : 1.xxx * 2^n
+- exponent가 0일때와 255일때는 다른 목적으로 사용됨  
+  <img width="500" alt="Image" src="https://github.com/user-attachments/assets/0b52c3ee-c2b0-4c32-aebf-1c8b5119a631" />
+- 부동소수점은 sign 1bit exponent 8bits fraction 23bits 으로 메모리를 나눠서 사용하기 때문에 예기치 못한 문제가 생길 수도 있다(?)
+- 4byte 정수 범위는 10^9이지만, 4byte 부동소수점수 범위는 10^38이다.  
+  하지만, 정밀도로 보장할 수 있는 숫자가 10진수 유효숫자 6개로 한정된다.
+``` c
+#include <stdio.h>
+#include <float.h>
+
+int main()
+{
+    printf("%zu\n", sizeof(float));  // 4
+    printf("%zu\n", sizeof(double));  // 8
+    printf("%zu\n", sizeof(long double));  // 8
+    // 표준에서 double정도의 정밀도만 가져도 된다고 정의되어있기 때문에.
+    // VS에서 제공하는 compiler는 double과 long double이 같다.
+    // VScode에서 gcc 사용시 12byte.
+
+    float f = 123.456f;
+    double d = 123.456;
+
+    // truncation(절단, 잘려나가다)
+    // 기본적으로 double로 인식하는데, 8byte를 float 4byte에 넣으려고 해서 에러.
+    float f2 = 123.456;
+    double d2 = 123.456f;  // ok. (형변환 관련)
+
+    int i = 3;
+    float f3 = 3.f;  // 3.0f
+    double d3 = 3.;  // 3.0
+
+    float f4 = 1.234e10f;  // scientific 표기법 ok.
+    float f5 = 0xb.ap1;  // 16진수, b(11) a(10/16 -> 0.625), p1 -> 2^1
+    double d5 = 1.0625e0;  // 1 + 1/16
+
+    // f, F : float / e, E : scientific notation
+    printf("%f %F %e %E\n", f, f, f, f);  // 123.456001 123.456001 1.234560e+02 1.234560E+02
+    printf("%f %F %e %E\n", d, d, d, d);  // 123.456001 123.456001 1.234560e+02 1.234560E+02
+    // a, A : 16진수 출력
+    printf("%f %a %A\n", f5, f5, f5);  // 23.250000 0x1.7400000000000p+4 0X1.7400000000000P+4
+    printf("%a %A\n", d5, d5);  // 0x1.1000000000000p+0 0X1.1000000000000P+0
+
+    return 0;
+}
+```
+
+
+### 📌 3.12 부동소수점형의 한계
+
+
+### 📌 3.13 불리언형
+
+
+### 📌 3.14 복소수형
+
 
