--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -368,11 +368,74 @@ int main()
 
 
 ### 📌 3.12 부동소수점형의 한계
+``` c
+    // round-off errors (ex1) = Catastrophic Cancellation (대규모 상쇄)
+    // 해당 오차는 float의 유효숫자 비트 제한 때문입니다.
+    // 매우 큰 수와 작은 수를 더할 때(=범위가 많이 다른 숫자를 연산하면) 작은 수가 무시될 수 있습니다.
+    float a, b;
+    //a = 1000.0f + 1.0f;  //  1.000000
+    a = 1.0E20f + 1.0f;  //  0.000000
+    b = a - 1.0E20f;
+    printf("%f\n", b);
+```
+``` c
+    // round-off errors (ex2) = 부동소수점 오차
+    // 컴퓨터는 2진수로 소수를 표현하기 때문에, 0.01 같은 10진수 소수를 정확하게 표현할 수 없습니다.
+
+    // float는 약 7자리의 유효숫자만 정확하게 표현. (4byte = 32bit)
+    // double은 약 15~16자리까지 정확. (8byte = 64bit)
+    float a = 0.0f;
+    for (int i = 0; i < 100; i++) {
+        a = a + 0.01f;
+    }
+    printf("%f\n", a);  // 0.999999
+
+    double b = 0.0;
+    for (char c = 0; c < 100; c++) {
+        b = b + 0.01;
+    }
+    printf("%lf\n", b);  // 1.000000
+```
+``` c
+    // overflow
+    // 정의되어있는 max값을 넘어가면 inf.
+    float max = 3.402823466e+38F;
+    printf("%f\n", max);  // 3402...
+    max = max * 100.0f;
+    printf("%f\n", max);  // inf -> infinite(무한)
+```
+``` c
+    // underflow
+    // subnormal : 정밀도 한계로 인해 아주 작은 수가 0으로 처리되는 현상
+    float f = 1.401298464e-45F;
+    printf("%e\n", f);  // 6자리까지만 보여주기 때문에 %e 표현 필요.
+    f = f / 100.0f;
+    printf("%e\n", f);  // 0.000000e+00
+```
+``` c
+    // divide by 0
+    float f = 104.0f;
+    printf("%f\n", f);
+    f = f / 0.0f;  // warning C4723: potential divide by 0
+    printf("%f\n", f);  // inf
+```
+``` c
+    float f = asinf(1.0f);
+    printf("%f\n", f);
+
+    f = asinf(2.0f);  // 입력 범위: −1.0 ≤ x ≤ 1.0, 이 범위를 벗어나면 NaN이 나와야 합니다.
+    printf("%f\n", f);  // 8096.000000
+```
 
 
 ### 📌 3.13 불리언형
+- 
 
 
 ### 📌 3.14 복소수형
+- 
+
+
+
 
 
