--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -420,6 +420,7 @@ int main()
     printf("%f\n", f);  // inf
 ```
 ``` c
+    // 컴파일러 최적화 문제 : 일부 컴파일러는 최적화 옵션에 따라 예외 처리를 생략하고 임의의 값을 반환할 수 있습니다.
     float f = asinf(1.0f);
     printf("%f\n", f);
 
