--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -429,14 +429,45 @@ int main()
 ```
 
 
-### 📌 3.13 불리언형
-- 
+### 📌 3.13 불리언형(Boolean Types)
+``` c
+#include <stdio.h>
+#include <stdbool.h>
+
+int main()
+{
+    printf("%zu\n", sizeof(_Bool)); // 1 byte
+
+    _Bool b1;  // _Bool은 내부적으로는 정수형
+    b1 = 0; // false
+    b1 = 1; // true
+
+    printf("%d\n", b1);  // 특정 format specifier가 없어서 %d로 출력.
+
+    bool b2, b3;
+    b2 = true;
+    b3 = false;
+    // true? false? (x)
+    // true? 아니면 false. (o)
+
+    printf("%d %d\n", b2, b3);
+
+    return 0;
+}
+```
 
 
-### 📌 3.14 복소수형
-- 
+### 📌 3.14 복소수형(Complex Types)
+``` c
+#include <stdio.h>
+#include <complex.h>
 
+int main() {
+    // 복소수는 직접 만들어서 쓰는 경우가 많아, 잘 지원되지는 않음.
+    _Dcomplex z;
+    z._Val[0] = 1.0;
+    z._Val[1] = 1.0;
 
-
-
-
+    return 0;
+}
+```
