--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -1,7 +1,7 @@
 ### 📌 3.1 데이터와 자료형(Data and Data types)
 - 정수 자료형 : `char`, `int`, `short`, `long` / unsigned, signed
 - 실수 자료형 : `float`, `double`, `long double`
-
+<img width="512" alt="Image" src="https://github.com/user-attachments/assets/6bc787e0-9988-4b27-94c3-1b0f5558814f" />
 
 ### 📌 3.2 변수와 상수(Variable and Constants)
 - int angel = 1004;
@@ -44,8 +44,9 @@ int main()
 
 
 ### 📌 3.4 간단한 입출력 프로그램 만들기
-- https://alvinalexander.com/programming/printf-format-cheat-sheet/  
-  ![Image](https://github.com/user-attachments/assets/2174bfbc-1d0b-4028-88da-39c6c5a11606)
+- https://alvinalexander.com/programming/printf-format-cheat-sheet/
+<img width="512" alt="Image" src="https://github.com/user-attachments/assets/2174bfbc-1d0b-4028-88da-39c6c5a11606" />
+
 - ⚠️ C 언어의 scanf는 포맷 문자열만 사용해야 하고, 공백 문자나 줄 바꿈 같은 건 넣으면 안 됩니다.
 ``` c
 int main()
@@ -76,7 +77,7 @@ int main()
 - float은 sign exponent fraction ~~(mantissa)~~ 으로 구성됨 (float은 unsigned가 없음)  
   > Fraction : Signiticand 중에서 소수점 아래 부분
 - 부동소수점 표준 방식 (https://www.geeksforgeeks.org/ieee-standard-754-floating-point-numbers/)  
-  ![Image](https://github.com/user-attachments/assets/b88014e3-ad64-40eb-ae4f-8c650fca4286)
+<img width="350" alt="Image" src="https://github.com/user-attachments/assets/b88014e3-ad64-40eb-ae4f-8c650fca4286" />
 
 
 ### 📌 3.6 정수의 오버플로우(Overflow)
@@ -171,7 +172,8 @@ int main()
 
 ### 📌 3.7 다양한 정수형들
 - 정수 자료형  
-  ![Image](https://github.com/user-attachments/assets/fdef4cdc-d770-4c18-a2f4-02c44b2cbe7e)
+<img width="488" alt="Image" src="https://github.com/user-attachments/assets/287ae227-2e59-44be-9ff0-957d13da1421" />
+
 - > hhd / hhu (c)  
   > hd / hu  
   > d or i / u  
