--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -194,7 +194,7 @@ int main()
     // char는 %hhd로 출력하지만, %d(큰 자료형)로 출력해도 문제 없음.
     // %c는 문자열로 출력해준다.
     printf("char = %hhd, %d, %c\n", c, c, c);  // 65, 65, A
-    // %hhd -> -128~128, 200 -> -56  ***Overflow***
+    // %hhd -> -128~128, 200 -> -56 : 값을 %hhd로 8비트만 읽어 해석
     printf("short = %hhd, %hd, %d\n", s, s, s);  // -56, 200, 200
     // %d ***Overflow***
     printf("unsigned int = %u, %d\n", ui, ui);  // 3000000000, -1294967296
