--- a/C/4.0_String_and_Formatted_I_O.md
+++ b/C/4.0_String_and_Formatted_I_O.md
@@ -87,7 +87,6 @@ int main()
 
 
 ### 📌 4.3 문자열이 메모리에 저장되는 구조
-- 
 ``` c
 #include <stdio.h>
 
@@ -121,5 +120,55 @@ int main()
 ```
 
 
-### 📌 4.4 strlen() 함수
+### 📌 4.4 strlen() 함수 (string length)
+- strlen() 함수의 반환값은 size_t 타입이므로, 표준 format specifier가 %zu  
+  null은 빼고, 실제 글자수만 count.
+``` c
+#include <stdio.h>
+#include <string.h> // strlen and more
+#include <stdlib.h>
+
+int main()
+{
+	char str1[100] = "Hello";
+	char str2[] = "Hello";  // 알아서 배열 설정
+	char str3[100] = " \0";  // space도 count
+	char str4[100] = "\n";  // line break(\n, escape sequence)도 count
+	
+	printf("%zu %zu\n", sizeof(str1), strlen(str1));  // 100 5
+	printf("%zu %zu\n", sizeof(str2), strlen(str2));  // 6 5
+	printf("%zu %zu\n", sizeof(str3), strlen(str3));  // 100 1
+	printf("%zu %zu\n", sizeof(str4), strlen(str4));  // 100 1
+
+	/* Extra */
+	// str5라는 포인터가 100개의 char(문자)를 저장할 수 있도록 동적 메모리를 할당하는 과정
+	char* str5 = (char*)malloc(sizeof(char) * 100);
+	str5[0] = 'H'; str5[1] = 'e'; str5[2] = 'l'; str5[3] = 'l'; str5[4] = 'o';
+	str5[5] = '\0';
+	printf("%zu %zu\n", sizeof(str5), strlen(str5));  // 8 5 // 8 : 포인터 변수 자체의 사이즈
+
+	return 0;
+}
+```
+- memory allocation (메모리 할당)  
+  malloc()(`동적 메모리 할당 함수`)을 호출하면 Heap 영역에서 100개의 char를 저장할 공간을 할당합니다. (sizeof(char) = 1)  
+  malloc()의 반환값은 void 타입(제네릭 포인터)이라서, char*로 형 변환(casting)해야 합니다.  
+  malloc()이 성공하면 `할당된 메모리의 시작 주소를 str5에 저장`합니다.  
+  (str5는 char 타입을 가리키는 포인터 변수로, 문자열(또는 문자 배열)의 시작 주소를 저장할 수 있음)  
+  이제 str5를 통해 `할당된 메모리에 접근`하여 `문자열을 저장`할 수 있습니다.
+
+
+### 📌 4.5 기호적 상수와 전처리기
+- 
+
+
+
+
+
+
+
+
+
+
+
 
