--- a/C/4.0_String_and_Formatted_I_O.md
+++ b/C/4.0_String_and_Formatted_I_O.md
@@ -158,8 +158,78 @@ int main()
   이제 str5를 통해 `할당된 메모리에 접근`하여 `문자열을 저장`할 수 있습니다.
 
 
-### 📌 4.5 기호적 상수와 전처리기
-- 
+### 📌 4.5 기호적 상수와 전처리기(Symbolic constant & #define)
+- `#define PI 3.141592f` vs `const float PI = 3.141592f;`  
+  일반적으로 const를 사용하는 것이 좋음.
+  #define은 단순 치환이라 타입 체크 불가능하고 디버깅이 어렵다.
+  const는 안전하고 유지보수하기 좋음.
+``` c
+#include <stdio.h>
+#define PI 3.141592f
+#define AI_NAME "Jarvis"
+
+int main()
+{
+	//const float pi = 3.141592f;
+	// C++에서는 constexp
+
+	float radius, area, circum;
+
+	printf("I'm %s. Please, input radius\n", AI_NAME);
+	scanf("%f", &radius);
+	// return value ignored: scanf 에러(또는 경고)는 scanf()의 반환 값을 확인하지 않아서 발생하는 경고.
+
+	area = PI * radius * radius; // area = pi*r*r
+	circum = 2.0f * PI * radius; // circum = 2.0 * pi * r
+
+	printf("Area is %f.\n", area);
+	printf("Corcumference is %f.\n", circum);
+
+	//TODO: wrong usage, strings, const
+
+	return 0;
+}
+```
+
+
+### 📌 4.6 명백한 상수들(Manifest(obvious) Constants)
+- #define PI 3.141592 : manifest constants
+  macro : 숫자 뿐만 아니라(ex. <limits.h>), 여러번 사용하는 기능을 정의하면.  
+``` c
+#include <stdio.h>
+#include <limits.h>	// INT_MAX, ..., etc.
+#include <float.h>  // FLT_MAX, ..., etc.
+
+#define PI 3.141592	// manifest constants, symbolic constants
+
+int main()
+{
+	printf("PI is %f\n", PI);
+	printf("Biggest int: %d\n", INT_MAX);
+	printf("One byte in this system is %d bits\n", CHAR_BIT);
+	printf("Smallest normal float %e\n", FLT_MIN);
+
+	return 0;
+}
+```
+
+
+### 📌 4.7 printf() 함수의 변환 지정자들(conversion specifiers (format spe..))
+<img width="500" src="https://github.com/user-attachments/assets/c7eeda18-d77f-45ff-8868-565328f00f63"/>
+
+``` c
+
+```
+
+
+
+
+
+
+
+
+
+
 
 
 
