--- a/C/4.0_String_and_Formatted_I_O.md
+++ b/C/4.0_String_and_Formatted_I_O.md
@@ -15,7 +15,7 @@ int main()
 
 	printf("What's your favorite fruit?\n");
 	scanf("%s", fruit_name); //ampersand -> 주소로 넣기. / %s : string
-	printf("oh, %s!\n", fruit_name);  //format(conversion) specifier
+	printf("oh, %s!\n", fruit_name);  //format specifier
 
 	return 0;
 }
@@ -24,7 +24,7 @@ int main()
 
 ### 📌 4.2 sizeof()
 1. sizeof basic types
-- 자료형이 차지하는 메모리의 크기 확인 가능 / 함수가 아니라 연산자.
+- 자료형이 차지하는 메모리의 크기 확인 가능 / 함수가 아니라 연산자.  
   기본적으로 unsigned int로 해결이 가능.(-1개는 아니니까.)
 - size_t : portable type  
   sizeof가 알려주는 사이즈가 unsigned int가 아닐 수도 있어서 size_t를 사용 (이식성)
@@ -44,10 +44,10 @@ int main()
 }
 ```
 2. sizeof arrays
-- int 타입의 30개 요소를 저장할 수 있는 배열 int_arr를 선언한다.
-  (extern이 없는 경우, 선언 = 정의 의미 동일)
-  - int_arr는 배열 전체의 크기를 알고 있음  
-  - int_ptr은 그냥 포인터일 뿐, 배열의 크기를 모름
+- int 타입의 30개 요소를 저장할 수 있는 배열 int_arr를 선언한다.  
+  (extern이 없는 경우, 선언 = 정의 의미 동일)  
+  int_arr는 배열 전체의 크기를 알고 있음  
+  int_ptr은 그냥 포인터일 뿐, 배열의 크기를 모름  
   <img width="500" src="https://github.com/user-attachments/assets/27ef9513-b8c7-4345-ad34-d61518d1cd9a"/>
 ``` c
 	int  int_arr[30]; // int_arr[0] = 1024; ...
@@ -160,9 +160,9 @@ int main()
 
 ### 📌 4.5 기호적 상수와 전처리기(Symbolic constant & #define)
 - `#define PI 3.141592f` vs `const float PI = 3.141592f;`  
-  일반적으로 const를 사용하는 것이 좋음.
-  #define은 단순 치환이라 타입 체크 불가능하고 디버깅이 어렵다.
-  const는 안전하고 유지보수하기 좋음.
+  일반적으로 const를 사용하는 것이 좋음.  
+  #define은 단순 치환이라 타입 체크 불가능하고 디버깅이 어렵다.  
+  const는 안전하고 유지보수하기 좋음.  
 ``` c
 #include <stdio.h>
 #define PI 3.141592f
@@ -193,7 +193,7 @@ int main()
 
 
 ### 📌 4.6 명백한 상수들(Manifest(obvious) Constants)
-- #define PI 3.141592 : manifest constants
+- #define PI 3.141592 : manifest constants  
   macro : 숫자 뿐만 아니라(ex. <limits.h>), 여러번 사용하는 기능을 정의하면.  
 ``` c
 #include <stdio.h>
@@ -214,12 +214,84 @@ int main()
 ```
 
 
-### 📌 4.7 printf() 함수의 변환 지정자들(conversion specifiers (format spe..))
-<img width="500" src="https://github.com/user-attachments/assets/c7eeda18-d77f-45ff-8868-565328f00f63"/>
+### 📌 4.7 printf() 함수의 변환 지정자들(conversion specifiers)
+- Format specifier = 전체 형식 지정 문자열  
+  Conversion specifier = format specifier 안에서 데이터 변환을 담당하는 부분  
+  > 엄밀히 보면 다른 개념이지만, 보통 같은 의미로 통용되는 경우가 많다.
+- %g, %G는 알아서 더 짧은 것으로 선택해준다.  
+  <img width="500" src="https://github.com/user-attachments/assets/c7eeda18-d77f-45ff-8868-565328f00f63"/>  
+  <img width="500" src="https://github.com/user-attachments/assets/0a6999d3-26b8-40c4-a2d5-336c90a133be"/>
+
+- float %f ? double %lf ?  
+  <img width="600" src="https://github.com/user-attachments/assets/88e193c3-dbb4-42b9-8ae2-78f9a5fd953e" />  
+  1. printf()에서는 %f와 %lf가 동일한 이유  
+     C에서 printf()는 가변 인수 함수 (variadic function) 야.  
+     가변 인수 함수에서는 `float이 자동으로 double로 변환됨` (이걸 "default argument promotion" 이라고 해).  
+     즉, printf("%f", f);에서 f는 내부적으로 double로 변환되어서 넘어감.  
+     그래서 printf()에서는 %f와 %lf가 결과적으로 동일하게 동작함.  
+  2. scanf()에서는 반드시 %lf를 써야 하는 이유  
+     scanf()는 `인자로 전달된 포인터의 타입을 그대로 사용해 데이터를 저장`함.  
+     double을 저장할 공간이 8바이트인데, %f를 쓰면 scanf()는 4바이트(float)만 읽고 저장하려고 함.  
+     하지만 double이 실제로는 8바이트를 차지하기 때문에 메모리 오류가 발생할 가능성이 있음.  
 
 ``` c
+#include <stdio.h>
+#include <limits.h>
+#include <float.h>
 
+int main()
+{
+	double d = 3.1415926535897932384626433832795028841971693993751058209749445923078164062;
+
+	printf("%c\n", 'A');  // A -> 한글자 표현할 때는 작은 따옴표.
+	printf("%s", "I love you\n");  // I love you
+	printf("Even if there's a small chance, \
+we owe this to everyone who's not in this room to try.\n");  // 편집을 위한 줄바꿈
+
+	printf("\n");
+	printf("%d %i %i %i\n", 1004, 1234, INT_MAX, UINT_MAX);// unsigned를 signed(%i)에 넣음. overflow
+	printf("%u %u %u\n", 1024, -1, UINT_MAX);			   // 음수(-1)를 unsigned에 넣음. overflow
+
+	printf("\n");
+	printf("%f %f %lf\n", 3.141592f, d, d); // l in %lf is ignored
+	printf("%a %A\n", d, d);
+	printf("%e %E\n", d, d);
+
+	printf("\n");
+	printf("%g %g\n", 123456.789, 1234567.89);  // 123457 1.23457e+06
+	printf("%G %G\n", 123456.789, 1234567.89);  // 123457 1.23457E+06
+	printf("%g %g\n", 0.00012345, 0.000012345);  // 0.00012345 1.2345e-05
+	printf("%G %G\n", 0.00012345, 0.000012345);  // 0.00012345 1.2345E-05
+
+	printf("\n");
+	printf("%o\n", 9);  // 11 -> 8진수
+	// pointer-of operator, d 변수가 사용하고 있는 메모리의 주소를 출력
+	printf("%p\n", &d);  // 00000072D32FFC68
+
+	printf("\n");
+	printf("%x %X\n", 11, 11);  // b, B
+	printf("%%\n", d); // Note the warning. d is ignored.
+
+	printf("\n");
+	// 자릿수 맞춰주기
+	printf("%9d\n", 12345);   //    12345
+	printf("%09d\n", 12345);  //000012345
+	printf("%.2f\n", 3.141592);  // 3.14
+	printf("%.20f %.20lf\n", d, d);
+
+	printf("\n");
+	int n_printed = printf("Counting!");  // printf의 리턴 값은 출력한 글자 개수.
+	printf("%u\n", n_printed);
+
+	return 0;
+}
 ```
+
+
+### 📌 4.8 변환 지정자의 수식어들
+
+
+
 
 
 
