--- a/C/4.0_String_and_Formatted_I_O.md
+++ b/C/4.0_String_and_Formatted_I_O.md
@@ -288,7 +288,14 @@ we owe this to everyone who's not in this room to try.\n");  // 편집을 위한
 ```
 
 
-### 📌 4.8 변환 지정자의 수식어들
+### 📌 4.8 변환 지정자의 수식어들(Modifiers)
+- %[flags][width][.precision][length]specifier (ex. printf("%+10.5hi", 256))
+<img width="700" alt="image" src="https://github.com/user-attachments/assets/ac967758-5c00-4eef-b10c-05de4e67bf82" />  
+<img width="700" alt="image" src="https://github.com/user-attachments/assets/8eec2d7a-7efb-4d11-9ea3-b503ef392881" />
+<img width="700" alt="image" src="https://github.com/user-attachments/assets/ce8ce7c9-8fa8-46e5-8957-33a1e4dfae53" />
+
+- %c의 인수는 char가 아니라 int가 되는 이유 : 기본 인수 승격 (Default Argument Promotion)
+  C에서 가변 인수 함수(printf 같은 함수)에 char, short 같은 작은 크기의 타입을 전달하면, 자동으로 int로 변환됨.
 
 
 
