--- a/C/4.0_String_and_Formatted_I_O.md
+++ b/C/4.0_String_and_Formatted_I_O.md
@@ -297,6 +297,46 @@ we owe this to everyone who's not in this room to try.\n");  // 편집을 위한
 - %c의 인수는 char가 아니라 int가 되는 이유 : 기본 인수 승격 (Default Argument Promotion)
   C에서 가변 인수 함수(printf 같은 함수)에 char, short 같은 작은 크기의 타입을 전달하면, 자동으로 int로 변환됨.
 
+``` c
+#include <stdio.h>
+#include <limits.h>
+
+int main()
+{
+	printf("%i\n", 1234567);            //1234567
+	printf("%10i\n", 1234567);          //   1234567 -> width 10자리
+	printf("%-10i\n", 1234567);         //1234567 -> - 왼쪽 정렬
+	printf("%+i %+i\n", 123, -123);     //+123 -123 -> sign
+	printf("% i \n% i\n", 123, -123);   // 123 -> space : +일때는 빈칸, -는 sign표시
+	                                    //-123
+	printf("%X\n", 17);                 //11
+	printf("%#X\n", 17);                //0X11
+	printf("%05i\n", 123);              //00123 -> 남는 자리 0으로 padding
+	printf("%*i\n", 7, 456);            //    456 -> 7이 *에 대응됨. (width를 param에서 제어)
+	                                    //scanf()에서는 의미가 다름
+
+	printf("\nPrecision\n");            //Precision
+	printf("%.3d\n", 1024);             //1024
+	printf("%.5d\n", 1024);             //01024 -> 5자리, 0으로 pending
+	printf("%.3f\n", 123456.1234567);   //123456.123
+	printf("%.3f\n", 123456.1235);      //123456.124 -> 반올림
+	printf("%10.3f\n", 123.45678);      //   123.457 -> 전체 자릿수가 10
+	printf("%010.3f\n", 123.45678);     //000123.457
+	printf("%.5s\n", "ABCDEFGHIJKLMN"); //ABCDE -> 글자갯수 제한. 문자열에도 적용
+	printf("%.s\n", "ABCDEFGHIJKLMN");  //assumes .0
+
+	printf("\nLength\n");
+	printf("%hhd %hd %d\n", 257, 257, 257);  //1(overflow) 257 257
+	printf("%d %lld %lld\n", INT_MAX + 1, INT_MAX + 1, 2147483648LL); //-2147483648 2147483648 2147483648 in x64
+
+	return 0;
+}
+```
+
+
+### 📌 4.9 
+
+
 
 
 
