--- a/C/4.0_String_and_Formatted_I_O.md
+++ b/C/4.0_String_and_Formatted_I_O.md
@@ -371,13 +371,114 @@ int main()
 - (x64)64bit 환경은 8byte씩 읽는 시스템입니다. 노란색으로 칠해져 있는 부분이 아래부터 각각 n1, n2, n3에 대응하여 출력됩니다. 8byte단위로 읽되 %d 때문에 이 8byte 중 4byte만 읽게 되는 것입니다. 그래서 이 값이 n1 에 들어갑니다. n2는 다음 8byte 단위 부분부터 %d로 인해 4byte읽게 되는 것이구요. `8byte 단위로 끊어 읽고 이 8byte에서 %d로 인해 4byte씩 읽게 되므로` 1024인 n3은 이에 영향받지 않고 그대로 출력될 수 있었던 것입니다.  
 (x32)32bit 환경은 4byte씩 읽는 시스템입니다. 분홍색으로 칠해져 있는 부분이 아래부터 각각 n1, n2, n3에 들어갑니다. 4byte 단위로 읽기 때문에 이와 같이 들어가는 것입니다.
 
-<img width="400" alt="{C0F9108F-6034-4ACE-A2B4-908A8BF6D30A}" src="https://github.com/user-attachments/assets/201ff777-953f-4a29-bf35-6e2075455466" />
+<img width="700" alt="{C0F9108F-6034-4ACE-A2B4-908A8BF6D30A}" src="https://github.com/user-attachments/assets/201ff777-953f-4a29-bf35-6e2075455466" />
 
 
-### 📌 4.10  
+### 📌 4.10 scanf() 함수의 사용법
 
+<img width="700" src="https://github.com/user-attachments/assets/3fa0dac3-a223-4485-a97c-6f10736c6335" />
+<img width="700" src="https://github.com/user-attachments/assets/5e3e9f19-de03-423a-b4d8-a3661b8d66ab" />
 
+``` c
+#include <stdio.h>
+#include <inttypes.h> // intmax_t
 
+int main()
+{
+	/* multiple inputs with blank separators */
+	// scanf()는 빈칸에서 끊어서 해석한다.
+	int i;
+	float f;
+	char str[30];
+	scanf("%d %f %s", &i, &f, str); //Note % is absent in front of str
+	printf("%d %f %s\n", i, f, str);
+
+	/* character */
+	// 문자는 숫자로 저장하며, 문자를 입력받을 때는 빈칸도 저장한다.(32)
+	char c;
+	scanf("%c", &c);	 // try blank
+	printf("%i\n", c); // blank is 32
+
+	/* Unsigned as signed */
+	// unsigned 변수에 signed로 저장하고 signed로 해석해서 문제가 없었지만, 바람직하지 않은 사용법이다.
+	unsigned i;
+	scanf("%i", &i);	// try negative number
+	printf("%i\n", i);
+
+	/* Unsigned as unsigned */
+	unsigned i2;
+	scanf("%u", &i2);	// try negative number
+	printf("%u\n", i2);
+
+	/* floating point numbers */
+	double d = 0.0;
+	scanf("%lf", &d);	 // lf, try E notation
+	printf("%f\n", d);   // f
+
+	/* Width */
+	//5글자까지만 받는다.
+	char str[30];
+	scanf("%5s", str); // width
+	printf("%s\n", str);
+
+	/* h modifier */
+	char i;
+	scanf("%hhd", &i); // try large numbers
+	printf("%i\n", i);
+
+	/* integer with characters */
+	//문자가 나오기 전인 숫자까지만 해석
+	int i;
+	scanf("%i", &i); // try '123ab', '123a456'
+	printf("%i\n", i);
+
+	/* j modifier */
+	intmax_t i;
+	scanf("%ji", &i);
+	printf("%ji", i);
+
+	/* Regular characters */
+	// %d 앞의 공백은 의미 없고, %d와 쉼표 사이의 공백만 생각할 것
+	int a, b, c;
+	scanf("%d,%d", &a, &b); // try blank separator only
+	scanf("%d , %d", &a, &b);
+	scanf("%d, %d", &a, &b);
+	scanf("%d,%d,%d", &a, &b, &c);
+	scanf("%d-%d", &a, &b);
+	scanf("%dA%d", &a, &b);
+	printf("%d %d %d\n", a, b, c);
+
+	/* char receives blank */
+	int a, b;
+	char c;
+	printf("%zu %zu %zu\n", sizeof(a), sizeof(b), sizeof(c));  // 4, 4, 1
+	scanf("%d%c%d", &a, &c, &b);// try 123 456 (blank)
+	printf("%d|%c|%d", a, c, b);// | is separator
+
+	// sentences?, getchar(), fgets(), etc.
+
+	/* return value of scanf() */
+	// 몇 개의 아이템을 입력 받았는지
+	int a, b;
+	int i = scanf("%d%d", &a, &b);
+	printf("%d", i);
+
+	/* *modifier for printf() */
+	int i = 123;
+	int width = 5; // from script file, scanf, etc.
+	printf("Input width : ");
+	scanf("%d", &width);
+	printf("%*d\n", width, i);
+
+	/* *modifier for scanf() */
+	// 입력을 3개를 받기는 받야아 하는데, 출력은 3번째만. (suppress)
+	int i;
+	scanf("%*d%*d%d", &i);
+	printf("Your third input = %d", i);
+
+	return 0;
+}
+```
 
 
 
