--- a/C/3.0_data_C.md
+++ b/C/3.0_data_C.md
@@ -1,7 +1,9 @@
 ### 📌 3.1 데이터와 자료형(Data and Data types)
-- 정수 자료형 : `char`, `int`, `short`, `long` / unsigned, signed
-- 실수 자료형 : `float`, `double`, `long double`
+- 정수 자료형 : char, int, short, long / unsigned, signed
+- 실수 자료형 : float, double, long double
+
 <img width="512" alt="Image" src="https://github.com/user-attachments/assets/6bc787e0-9988-4b27-94c3-1b0f5558814f" />
+
 
 ### 📌 3.2 변수와 상수(Variable and Constants)
 - int angel = 1004;
@@ -17,7 +19,7 @@
 
 
 ### 📌 3.3 scanf()
-- &i는 i의 메모리 주소를 알려줍니다.  
+- `&i는 i의 메모리 주소를 알려줍니다.`  
   scanf는 해당 주소에 입력 값을 저장합니다.
   
 - ⚠️ MSVC에서 보안 문제로 인해 경고를 발생시키는데, 경고를 무시하고 기존 C 표준 함수를 사용하고 싶다면, 매크로를 정의해야 함.  
@@ -25,9 +27,9 @@
   > b) project - properties - preprocessor - debug & release 모두 Definition에 _CRT_SECURE_NO_WARNINGS 입력
 
 - GCC와 호환이 안됨 : GCC는 _CRT_SECURE_NO_WARNINGS와 같은 MSVC 전용 매크로를 인식하지 않습니다.
+
 ``` c
 //#define _CRT_SECURE_NO_WARNINGS  // macro
-
 #include <stdio.h>
 
 int main()
@@ -48,6 +50,7 @@ int main()
 <img width="512" alt="Image" src="https://github.com/user-attachments/assets/2174bfbc-1d0b-4028-88da-39c6c5a11606" />
 
 - ⚠️ C 언어의 scanf는 포맷 문자열만 사용해야 하고, 공백 문자나 줄 바꿈 같은 건 넣으면 안 됩니다.
+
 ``` c
 int main()
 {
@@ -67,21 +70,28 @@ int main()
 
 
 ### 📌 3.5 정수와 실수(Integers and Real numbers)
-- C 언어에서는 변수 선언 시 메모리 공간을 자료형에 맞게 미리 확보합니다.  
+- C 언어에서는 `변수 선언 시 메모리 공간을 자료형에 맞게 미리 확보`합니다.  
   정수와 실수는 저장 방식과 연산 방식이 달라서 구분해야 합니다.
+  
 - Exponent : 3.14 = 3.14E0 = 3.14e0 = 0.314E1 = 31.4E-1
-- signed와 unsigned는 range가 다름 (1bit을 부호에 할당하기 때문에)
-- ⭐️ **부동소수점은 기본적으로 double에 할당 (정밀도 높음, 8바이트)**  
+
+- `signed와 unsigned는 range가 다름` (1bit을 부호에 할당하기 때문에)
+
+- `부동소수점은 기본적으로 double에 할당` (정밀도 높음, 8바이트)  
   메모리를 아끼기 위해 또는 정밀도가 덜 중요한 경우 float 사용 (4바이트)  
   float은 double의 절반 크기로 메모리 효율이 좋음
-- float은 sign exponent fraction ~~(mantissa)~~ 으로 구성됨 (float은 unsigned가 없음)  
+  
+- `float은 sign exponent fraction ~~(mantissa)~~ 으로 구성됨` (float은 unsigned가 없음)  
   > Fraction : Signiticand 중에서 소수점 아래 부분
-- 부동소수점 표준 방식 (https://www.geeksforgeeks.org/ieee-standard-754-floating-point-numbers/)  
+
+- 부동소수점 표준 방식 (https://www.geeksforgeeks.org/ieee-standard-754-floating-point-numbers/)
+
 <img width="350" alt="Image" src="https://github.com/user-attachments/assets/b88014e3-ad64-40eb-ae4f-8c650fca4286" />
 
 
 ### 📌 3.6 정수의 오버플로우(Overflow)
 - 2진수로 입력 / format specifier 문제 확인
+
 ``` c
 #include <stdio.h>
 #include <limits.h>
@@ -101,7 +111,9 @@ int main()
     printf("%u\n", sizeof(i));
 }
 ```
+
 - 0b : 뒤의 literal이 binary라는 의미. (C 표준은 아니다.)
+
 - sizeof()는 연산자.  
   ⚠️ C4477: 'printf' : format string '%u' requires an argument of type 'unsigned int', but variadic argument 1 has type 'size_t'  
   consider using '%zu' in the format string
@@ -115,6 +127,7 @@ int main()
   > VS2022는 이 표준을 따르기 위해 경고를 추가한 것으로 보입니다.
 
 - %d여도 작은 숫자에서는 에러가 없었다.
+
 ``` c
     //2
     unsigned int i = 1024;
